@@ -1429,6 +1429,22 @@ PRICE does nothing. \
 EXPIRESEC can be set to make this property temporary, so that an item \
 dropped becomes "unowned" once the owner is gone for the number of seconds given.
 
+PROP_QUESTGIVER=\
+Property   : Prop_QuestGiver\n\r\
+Targets    : Areas, Exits, Items, Mobs, Rooms\n\r\
+Parameters : QUEST="[NAME]/GENERATE:([ARGS])" (MESSAGE="[ANNOUNCEMENT]")\n\r\
+Parameters : (DETAILS="TRUE/FALSE") (OPTIONAL="TRUE/FALSE")\n\r\
+Parameters : (TRIGGER="GET/ENTER/LEAVE/PUTIN/DEATH/SPEAK/WEAR/WIELD/READ")\n\r\
+Example    : quest="save_the_day" message="You found a quest item" trigger=GET\n\r\
+Description: \n\r\
+Makes the item, room, whatever capable of offering a quest to the player who \
+triggers it.  The trigger has a default for each object type, but you can \
+set it explicitly with the TRIGGER argument.  The quest can be made non-optional \
+with the OPTIONAL argument.  The MESSAGE is shown before the quest is offered. \
+The quest details will be as well, unless the DETAILS argument is set to false. \
+The quest itself can be specified by name, or you can have one generated by the \
+RandomQuests behavior by putting GENERATE: followed by optional quest parameters.
+
 PROP_REQALIGNMENTS=\
 Property   : Prop_ReqAlignments\n\r\
 Targets    : Rooms, Areas, Exits\n\r\
